--- a/client/src/css/WizardAdvancedStats.css
+++ b/client/src/css/WizardAdvancedStats.css
@@ -1,3 +1,15 @@
 .AdvancedStats {
     font-size: 1rem;
 }
+
+.AdvancedNav {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.AdvancedNav img {
+    height: 40px;
+    vertical-align: middle;
+}
