--- a/client/src/css/WizardSchoolStat.css
+++ b/client/src/css/WizardSchoolStat.css
@@ -9,13 +9,14 @@
 
 .StatTable {
     width: 100%;
+    table-layout: fixed;
     font-size: 1em;
     border: 1px solid black;
     border-collapse: collapse;
 }
 
 .StatTable img {
-    height: 30px;
+    height: 1.5em;
     vertical-align: middle;
 }
 
